# rfq-dip-epics

./: .gitmodules  LICENSE  README.md
AVR/: README.md
AVR/OptimizedSerialRW/: CMakeLists.txt
AVR/OptimizedSerialRW/include/: eval.hpp  usart.hpp
AVR/OptimizedSerialRW/lib/libstaticio/: README.md
AVR/OptimizedSerialRW/lib/libstaticio/include/staticio/: gpio.hpp  io.hpp  tools.hpp
AVR/OptimizedSerialRW/lib/libstaticio/include/staticio/boards/: port_def_atmega2560.hpp
AVR/OptimizedSerialRW/lib/libstaticio/src/staticio/: pwm.cpp
AVR/OptimizedSerialRW/src/: eval.cpp  main.cpp  usart.cpp
AVR/SerialReadWrite/: .gitignore  CMakeLists.txt  README.md
AVR/SerialReadWrite/include/: digital_io.hpp  eval.hpp  port_def_atmega2560.hpp  usart.hpp
AVR/SerialReadWrite/src/: digital_io.cpp  eval.cpp  main.cpp
AVR/Thermocouple/: Thermocouple.ino
AVR/communication_library/: Channel.cpp  Channel.h  README.md
AVR/communication_library/examples/ArduinoExample/: ArduinoExample.ino
AVR/devices/InterlockBox/: InterlockBox.ino
AVR/devices/IonGaugeController/: IonGaugeController.ino
AVR/devices/IonGaugeController_Teensy/: IonGaugeController_Teensy.ino
AVR/devices/PSController/: PSController.ino
AVR/devices/PSController_Filament/PSController_Filament/: PSController_Filament.ino
AVR/devices/PSController_Filament/PSController_Filament_Temperature/PSController_Filament_Temperature/: PSController_Filament_Temperature.ino
AVR/devices/PSController_HV/PSController_HV/: PSController_HV.ino
AVR/devices/SensorBox/: SensorBox.ino
AVR/devices/SolenoidValveBox/SolenoidValveBox/: SolenoidValveBox.ino
AVR/devices/Teensy_Ammeter/: Teensy_Ammeter.ino
AVR/devices/Teensy_PID/Teensy_PID/: Teensy_PID.ino
AVR/devices/TemperatureSensor/: TemperatureSensor.ino
AVR/lib/libcom/include/com/: com.hpp  eval.hpp
AVR/lib/libcom1/: README.md  libcom1_com.hpp
AVR/lib/libutil/: README.md  extra.hpp  initializer_list.hpp  libutil_utility.hpp  type_traits.hpp  type_traits_arrays.hpp  type_traits_composite_type_categories.hpp  type_traits_const_volatility.hpp  type_traits_helper_classes.hpp  type_traits_misc_transformations.hpp  type_traits_primary_type_categories.hpp  type_traits_property_queries.hpp  type_traits_type_relationships.hpp
AVR/libcom1/: README.md  libcom1.hpp  libcom1_com.hpp  libcom1_eval.hpp
AVR/libcom1/examples/Benchmark/: benchmark_commlib.ino  benchmark_libcom1.ino  communicate.py
AVR/libcom1/examples/CommunicationExample/: CommunicationExample.ino
AVR/libcom1/examples/StandaloneExample/: ,gitignore  CMakeLists.txt  clock.cpp  clock.hpp  libcom1  libstaticio  libutil  main.cpp  usart.cpp  usart.hpp
AVR/libstaticio/include/staticio/: io.hpp  pins.hpp  port_defs.hpp  pwm.hpp
AVR/libstaticio/src/staticio/: pwm.cpp
AVR/libutil/: expected.hpp  functional.hpp  libutil.hpp  placementnew.hpp  type_traits_pointers.hpp  type_traits_references.hpp  type_traits_sign_modifiers.hpp  type_traits_supported_operations.hpp  type_traits_type_properties.hpp
AVR/old_arduino/: error_codes.txt
AVR/old_arduino/Dummy/: Dummy.ino
AVR/old_arduino/InterlockBox/: InterlockBox.ino
AVR/old_arduino/InterlockBox/InterlockBox/: InterlockBox.ino
AVR/old_arduino/IonGaugeController/IonGaugeController/: IonGaugeController.ino
AVR/old_arduino/IonGaugeController_Teensy/: IonGaugeController_Teensy.ino
AVR/old_arduino/MAX31856/: MAX31856.cpp  MAX31856.h  keywords.txt
AVR/old_arduino/PSController/: PSController.ino
AVR/old_arduino/PSController_Filament/PSController_Filament/: PSController_Filament.ino
AVR/old_arduino/PSController_HV/PSController_HV/: PSController_HV.ino
AVR/old_arduino/SensorBox/: SensorBox.ino
AVR/old_arduino/SolenoidValveBox/SolenoidValveBox/: SolenoidValveBox.ino
AVR/old_arduino/Teensy_Ammeter/: Teensy_Ammeter.ino
AVR/old_arduino/Teensy_PID/Teensy_PID/: Teensy_PID.ino
AVR/old_arduino/TemperatureSensor/: TemperatureSensor.ino
AVR/old_arduino/TemperatureSensor/TemperatureSensor/: TemperatureSensor.ino
AVR/old_arduino/communication_library/: Channel.cpp  Channel.h  Communication.cpp  Communication.h
AVR/old_arduino/old/InterlockBox/: InterlockBox.ino
AVR/old_arduino/old/IonGaugeController/: IonGaugeController.ino
AVR/old_arduino/old/Multiple_Interrupts/: Multiple_Interrupts.ino
AVR/old_arduino/old/PS_Controller/: PS_Controller.ino
AVR/old_arduino/old/PS_Controller_DW/: PS_Controller_DW.ino
AVR/old_arduino/old/PS_Controller_v3/: Channel.cpp  Channel.h  Communication.cpp  Communication.h  PS_Controller_v3.ino
AVR/old_arduino/old/Version2/: Channel.cpp  Channel.h  Communication.cpp  Communication.h  Version2.ino
AVR/old_arduino/old/id/: id.ino
AVR/old_arduino/old/read_uuid/: read_uuid.ino
AVR/old_arduino/old/write_uuid/: write_uuid.ino
Arduino/: ArduinoExample.ino
Arduino/communication_library/: Communication.cpp  Communication.h
EPICS/: IOC.PIDtest.db  IOC.interlockbox.db  IOC.libcom1.proto  IOC.matsusada_au20p7.db  IOC.matsusada_co_ctrl.proto  IOC.menuScan.dbd  IOC.millis.h  IOC.pressure.db  IOC.sensorbox.db  IOC.sncExample.stt  IOC.solenoidbox.db  IOC.solenoidvalves.db  IOC.temperature.db  IOCa.libcom1.db  Makefile  README  StreamDevice.LibCom1ExponentConverter.cc  StreamDevice.RELEASE.local  asyn.RELEASE.local  interlockbox.db  libcom1.proto  matsusada_au20p7.db  pressure.db  rek.db  rek.proto  sensorbox.db  st.cmd  tdk.db  thermocouples.db
EPICS/Db/: IOC.libcom1_thermocouple.db  aim.db  aim.proto  libcom1.db  matsusada_co_ctrl.proto  solenoidbox.db  tdk.db  tdk.proto
RAS/: README.md
RAS/IsoDAR/: BeamlinePage.js  Devices.js  Home.css  Home.js  Main.js  Plots.js  Safety.js  Vacuum.js
RAS/IsoDAR/Utils/: Beamline.js  FaradayCup.js  Indicator.js  IonGaugeController.js  MassFlowController.js  ModContextMenu.js  ModGraphY.js  NamedButton.js  PowerSupply.js  REKPowerSupply.js  TempSensor.js  TestPopUp.js  TimeStampGraph.js  WaterFlowController.js
RAS/IsoDAR/Utils/Svgs/: EmiVert.js  test.js
RAS/IsoDAR/Utils/Utils/: FaradayCup.js  IonGaugeController.js  MassFlowController.js  TempSensor.js  WaterFlowController.js
(+14 files in other folders)
